added main structure

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,14 @@
     border: 2px dashed #000;
 }
 
+.db-h-1x {
+    min-height: 50px;
+}
+
+.db-h-2x {
+    min-height: 400px;
+}
+
 
 /* **********************************************************************************
 ? ELEMENTS
