--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
 
 
 
-
 /* *****************************************
 ! Debug
 * *****************************************/
@@ -41,6 +40,10 @@
 
 .debug [class^="col"] {
     border: 2px dashed yellow;
+}
+
+.debug section {
+    padding: 1rem 0;
 }
 
 
