fixed navbar structure

--- a/css/style.css
+++ b/css/style.css
@@ -42,15 +42,13 @@
     border: 2px dashed yellow;
 }
 
-.debug section {
-    padding: 1rem 0;
-}
-
 
 /* **********************************************************************************
 ? ELEMENTS
 * ***********************************************************************************/
-
+/* *****************************************
+* Jumbotron
+* *****************************************/
 
 
 
