added jumbotron xs content

--- a/css/style.css
+++ b/css/style.css
@@ -46,10 +46,13 @@
 /* **********************************************************************************
 ? ELEMENTS
 * ***********************************************************************************/
+
 /* *****************************************
 * Jumbotron
 * *****************************************/
-
+#main-jumbotron img {
+    width: 250px;
+}
 
 
 
