--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,17 @@
 /* **********************************************************************************
 ? RESPONSIVE
 * ***********************************************************************************/
+
+/* MD */
+@media screen and (min-width: 768px) {
+    /* *****************************************
+    * Jumbotron
+    * *****************************************/
+    #main-jumbotron h1 {
+        font-size: 3.5rem;
+    }
+
+    #main-jumbotron p {
+        font-size: 1.5rem;
+    }
+}
