--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,11 @@
         font-size: 3rem;
     }
 
-    
+    h5 {
+        font-size: 1.7rem;
+    }
+
+
     /* *****************************************
     * Jumbotron
     * *****************************************/
