--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,8 @@
 .sep::after,
 .sep::before {
     content: '';
-    width: 10%;
+    width: 12vw;
+    max-width: 150px;
     height: 4px;
     background-color: currentColor;
     border-radius: 2px;
