--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@
 * Contact
 * *****************************************/
 #contact .form-control {
+    background-color: transparent;
     border-radius: 0;
     border-width: 0 0 1px 0;
 }
